-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 9
-
Component/s: hotspot
-
b94
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241870 | openjdk8u262 | Unassigned | P2 | Resolved | Fixed | team |
| JDK-8248940 | 8u271 | Unassigned | P2 | Resolved | Fixed | b01 |
| JDK-8239821 | 8u261 | David Buck | P2 | Closed | Fixed | b01 |
| JDK-8244880 | 8u251 | Unassigned | P2 | Resolved | Fixed | b34 |
| JDK-8251618 | emb-8u271 | Unassigned | P2 | Resolved | Fixed | team |
| JDK-8246877 | emb-8u261 | Unassigned | P2 | Resolved | Fixed | team |
THe following should be an equals check, not an assignment:
if (_last = curr) {
_last = NULL;
}
if (_last = curr) {
_last = NULL;
}
- backported by
-
JDK-8241870 Erroneous assignment in HeapRegionSet.cpp
-
- Resolved
-
-
JDK-8243920 Erroneous assignment in HeapRegionSet.cpp
-
- Resolved
-
-
JDK-8244880 Erroneous assignment in HeapRegionSet.cpp
-
- Resolved
-
-
JDK-8246877 Erroneous assignment in HeapRegionSet.cpp
-
- Resolved
-
-
JDK-8248940 Erroneous assignment in HeapRegionSet.cpp
-
- Resolved
-
-
JDK-8251618 Erroneous assignment in HeapRegionSet.cpp
-
- Resolved
-
-
JDK-8239821 Erroneous assignment in HeapRegionSet.cpp
-
- Closed
-
(2 backported by)