8141056: Erroneous assignment in HeapRegionSet.cpp

Reviewed-by: tschatzl, pliden